--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tanstack/store": "^0.7.0",
+    "abstract-astar": "^0.2.0",
     "honeycomb-grid": "^4.1.5"
   }
 }
